--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -13,6 +13,7 @@
             <select name="difficulty">
                 <option value="no_filter">No filter</option>
                 <option value="simple_filter_1">Simple filter 1</option>
+                <option value="simple_filter_2">Simple filter 2</option>
             </select>
         </label>
     </form>
