Added AllScriptsRemoved filter.

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -14,6 +14,7 @@
                 <option value="no_filter">No filter</option>
                 <option value="simple_filter_1">Simple filter 1</option>
                 <option value="simple_filter_2">Simple filter 2</option>
+                <option value="medium_filter_1">Medium filter 1</option>
             </select>
         </label>
     </form>
