--- a/src/main/resources/templates/base.hbs
+++ b/src/main/resources/templates/base.hbs
@@ -7,15 +7,41 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Welcome to the Bank of XSS!</title>
-        <link rel="stylesheet" href="/css/main.css">
+        <!--<link rel="stylesheet" href="/css/main.css">-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+        <link rel="stylesheet" href="/css/signin.css">
+        <link rel="stylesheet" href="/css/narrow-jumbotron.css">
+
     </head>
     <body>
-        <div class="page">
+        <!--<div class="page">-->
+        <div class="container">
+            <div class="header clearfix">
+                <nav>
+                    <ul class="nav nav-pills float-right">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/help">Help</a>
+                        </li>
+                    </ul>
+                </nav>
+                <h3 class="text-muted">CTF - Reflected XSS</h3>
+            </div>
+
+
+
+
 {{/block}}
 
 {{#block "content"}}{{/block}}
 
 {{#block "footer"}}
+        <footer class="footer">
+            <p>&copy; The Bank of XSS.  We don't take your security seriously.</p>
+        </footer>
+
         </div>
 
     </body>
